--- a/_posts/2023-10-07-Lovetow.md
+++ b/_posts/2023-10-07-Lovetow.md
@@ -1,4 +1,17 @@
-99
+
+
+```
+---
+title: 안녕하슈
 
 ![[../images/Pasted image 20231007200415.png]]
+
+categories: []
+comments: true
+tags: []
+---
+```
+
+이제 왼쪽 바의99
+
 
