--- a/_posts/2023-10-07-Lovetow11.md
+++ b/_posts/2023-10-07-Lovetow11.md
@@ -3,9 +3,6 @@
 ```
 ---
 title: 안녕하슈
-
-![[../images/Pasted image 20231007200415.png]]
-
 categories: []
 comments: true
 tags: []
@@ -15,3 +12,5 @@ tags: []
 이제 왼쪽 바의99
 
 
+
+![[Pasted image 20231007204205.png]]
