--- a/_posts/2023-10-07-Lovetow11.md
+++ b/_posts/2023-10-07-Lovetow11.md
@@ -1,16 +1,21 @@
 
-
-```
+![[Pasted image 20231007204205.png]]
 ---
 title: 안녕하슈
 categories: []
 comments: true
-tags: []
 ---
+
 ```
 
 이제 왼쪽 바의99
 
 
 
+
+
+
+
+
 ![[Pasted image 20231007204205.png]]
+
