--- a/_posts/2023-10-07-Lovetow11.md
+++ b/_posts/2023-10-07-Lovetow11.md
@@ -1,10 +1,14 @@
 
-![[Pasted image 20231007204205.png]]
+![aa](/images/20231007204205.png)
+
 ---
 title: 안녕하슈
 categories: []
 comments: true
 ---
+
+
+
 
 ```
 
