--- a/_posts/2023-10-07-THanks.md
+++ b/_posts/2023-10-07-THanks.md
@@ -1,6 +1,6 @@
 
-![](20231007220117.png)
+![image-center](/assets/images/filename.jpg){: .align-center}
+
+![image-center](/assets/images/filename.png){: .align-center}
 
 
-
-![](Pasted%20image%2020231007222155.png)
