--- a/_posts/2023-10-07-soccer.md
+++ b/_posts/2023-10-07-soccer.md
@@ -1,4 +1,6 @@
 
-test
 
-![](Pasted%20image%2020231007224007.png)
+![](assets/images/Pasted%20image%2020231007224745.png)
+
+![](![image-center](/assets/images/Pasted% %image%20231007224314.png)
+
