--- a/_posts/2023-10-07-soccer.md
+++ b/_posts/2023-10-07-soccer.md
@@ -1,6 +1,7 @@
 
 
-![](assets/images/Pasted%20image%2020231007224745.png)
+![](assets/images/Pasted 20image 2020231007224745.png)
 
 ![](![image-center](/assets/images/Pasted% %image%20231007224314.png)
 
+![[assets/images/Pasted image 20231007225110.png]]
