--- a/_posts/2023-10-07-soccer.md
+++ b/_posts/2023-10-07-soccer.md
@@ -4,4 +4,4 @@
 
 ![](![image-center](/assets/images/Pasted% %image%20231007224314.png)
 
-![[assets/images/Pasted image 20231007225110.png]]
+![[assets/images/apc.png]]
